--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,10 @@ body {
   background-color: #26282A;
 }
 
+strong {
+  font-weight: 600;
+}
+
 #canvas-container {
   position: fixed;
   width: calc(100vw - 300px);
@@ -325,10 +329,16 @@ body {
   max-width: 300px;
   border: solid 1px #7C868E;
   border-radius: 10px;
-  padding: 10px;
-  background-color: rgba(53, 58, 61, 0.7);
+  padding: 10px 10px 0 10px;
+  background-color: rgba(53, 58, 61, 0.85);
   color: white;
   z-index: 30;
+}
+.node-popup .node-popup-content {
+  padding-top: 20px;
+  max-height: calc(var(--vh, 1vh) * 70);
+  overflow: scroll;
+  padding-bottom: 20px;
 }
 @media (max-width: 800px) {
   .node-popup {
@@ -345,16 +355,17 @@ body {
   padding-right: 50px;
   line-height: 110%;
   padding-bottom: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 0;
   border-bottom: solid 1px #7C868E;
 }
 .node-popup p {
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   color: #C4CACE;
 }
 .node-popup ul {
   display: flex;
   gap: 10px;
+  margin-bottom: 10px;
 }
 .node-popup ul li {
   padding: 5px 10px;
